# falling-sand

./: .gitignore  CMakeLists.txt  README.md  falling-sand.kdev4
.kdev4/: falling-sand.kdev4
assets/shaders/: computeShader.glsl  fragmentShader.frag  vertexShader.vert
include/SDL3/: SDL_revision.h
src/: main.cpp
src/automata/: automata.cpp  automata.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/shader/: Shader.h
